--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -49,11 +49,11 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g9Q-QW-DeP" id="mav-NV-Wjh">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="My Profile" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="F4U-2a-tgt">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="43"/>
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                     <nil key="textColor"/>
@@ -1070,15 +1070,15 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostCell" textLabel="wcC-rl-Ou9" rowHeight="72" style="IBUITableViewCellStyleDefault" id="MTg-Y3-tvG">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostCell" textLabel="Cl2-u1-HAV" rowHeight="72" style="IBUITableViewCellStyleDefault" id="MTg-Y3-tvG" customClass="NewsTableViewCell" customModule="SidebarMenu" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="22" width="375" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MTg-Y3-tvG" id="dHK-ta-eP1">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="71.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wcC-rl-Ou9">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="71"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Cl2-u1-HAV">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="71.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -1112,11 +1112,53 @@
                         <outlet property="extraButton" destination="ezC-KX-FhN" id="iY1-G2-pgJ"/>
                         <outlet property="menuButton" destination="RpP-Nh-DTH" id="uCV-ox-nGh"/>
                         <outlet property="tableView" destination="dRd-N9-5sE" id="Jz9-P1-VmU"/>
+                        <segue destination="dVL-gQ-THv" kind="showDetail" identifier="ScheduledTripsVC" id="ptg-O7-nep"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wyu-Mv-6ey" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2188" y="-478.11094452773619"/>
+        </scene>
+        <!--Scheduled Trips Detail View Controller-->
+        <scene sceneID="kCi-U6-bj3">
+            <objects>
+                <viewController id="dVL-gQ-THv" customClass="ScheduledTripsDetailViewController" customModule="SidebarMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MeW-YR-s2O"/>
+                        <viewControllerLayoutGuide type="bottom" id="B5i-iT-kdD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZhD-CM-wbn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Kwn-pZ-oD7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmQ-9a-0h7">
+                                <rect key="frame" x="16" y="28" width="58" height="30"/>
+                                <state key="normal" title="Go Back"/>
+                                <connections>
+                                    <action selector="goBackButtonTapped:" destination="dVL-gQ-THv" eventType="touchUpInside" id="SXG-lE-X7o"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Kwn-pZ-oD7" secondAttribute="trailing" id="HFY-oL-OdQ"/>
+                            <constraint firstItem="VmQ-9a-0h7" firstAttribute="top" secondItem="MeW-YR-s2O" secondAttribute="bottom" constant="8" id="JNW-XL-NgM"/>
+                            <constraint firstItem="Kwn-pZ-oD7" firstAttribute="top" secondItem="ZhD-CM-wbn" secondAttribute="top" id="W95-38-i2b"/>
+                            <constraint firstItem="VmQ-9a-0h7" firstAttribute="leading" secondItem="ZhD-CM-wbn" secondAttribute="leadingMargin" id="t3d-5J-C33"/>
+                            <constraint firstItem="Kwn-pZ-oD7" firstAttribute="leading" secondItem="ZhD-CM-wbn" secondAttribute="leading" id="waq-Fe-ubl"/>
+                            <constraint firstItem="B5i-iT-kdD" firstAttribute="top" secondItem="Kwn-pZ-oD7" secondAttribute="bottom" id="y2f-RN-ucK"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="Kwn-pZ-oD7" id="Si3-0L-N2t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hHZ-pz-b86" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2888.8000000000002" y="-485.30734632683664"/>
         </scene>
     </scenes>
     <resources>
